project(tricuspid)
cmake_minimum_required(VERSION 3.1.0)

add_executable(tricuspid tricuspid.cpp)

set(TRICUSPID_MAJOR_VERSION 0)
set(TRICUSPID_MINOR_VERSION 1)
set(TRICUSPID_PATCH_VERSION 3)
set(TRICUSPID_VERSION ${TRICUSPID_MAJOR_VERSION}.${TRICUSPID_MINOR_VERSION}.${TRICUSPID_PATCH_VERSION})
set(COPY_YEAR 2018)

include_directories(${PROJECT_BINARY_DIR})
configure_file (config.h.in config.h)

set(CPACK_PACKAGE_VERSION_MAJOR ${TRICUSPID_MAJOR_VERSION})
set(CPACK_PACKAGE_VERSION_MINOR ${TRICUSPID_MINOR_VERSION})
set(CPACK_PACKAGE_VERSION_PATCH ${TRICUSPID_PATCH_VERSION})
set(CPACK_SOURCE_IGNORE_FILES /\\\\.git;.*~)
include(CPack)
